[package]
name = "nomination_pools"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/r0gue-io/ink", branch = "sub0", default-features = false }
polkavm-derive = "0.11.0"
pop-api = { git = "https://github.com/r0gue-io/pop-node", branch = "sub0", default-features = false, features = [ "messaging" ] }
superdao = { path = "../superdao", default-features = false, features = ["ink-as-dependency"] }
superda0-traits = { path = "../../traits", default-features = false}

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "superdao/std",
    "pop-api/std",
    "superda0-traits/std",
]
ink-as-dependency = []
e2e-tests = []
