[package]
name = "superdao"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "peter/fix-xcm-encoding", default-features = false }
#polkavm-derive = "0.11.0"

[dev-dependencies]
ink_e2e = { version = "5.0.0" }
hex = "0.4.3"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
