[package]
name = "superdao"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false }
superdao-traits = { path = "../../traits", default-features = false }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master" }
hex = "0.4.3"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "superdao-traits/std"]
ink-as-dependency = []
e2e-tests = []
